force-app/main/default/objects/Lead/Lead.object-meta.xml
<CustomObject>
    <label>Lead</label>
    <pluralLabel>Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>