force-app/main/default/objects/Lead/fields/Bathrooms__c.field-meta.xml
<CustomField>
    <fullName>Bathrooms__c</fullName>
    <label>Bathrooms</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <description>Number of bathrooms required</description>
</CustomField>