force-app/main/default/objects/Lead/fields/Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Bedrooms__c</fullName>
    <label>Bedrooms</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <description>Number of bedrooms required</description>
</CustomField>