force-app/main/default/objects/Lead/fields/Buyer_Type__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Type__c</fullName>
    <label>Buyer Type</label>
    <type>Picklist</type>
    <description>Type of buyer from EstateIQ intake form</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First-Time Buyer</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>Relocating</fullName>
            </value>
            <value>
                <fullName>Upsizing</fullName>
            </value>
            <value>
                <fullName>Downsizing</fullName>
            </value>
            <value>
                <fullName>Holiday Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>