force-app/main/default/objects/Lead/fields/Floors__c.field-meta.xml
<CustomField>
    <fullName>Floors__c</fullName>
    <label>Floors</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <description>Number of floors required</description>
</CustomField>