force-app/main/default/objects/Lead/fields/Garage_Spaces__c.field-meta.xml
<CustomField>
    <fullName>Garage_Spaces__c</fullName>
    <label>Garage Spaces</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <description>Number of garage spaces required</description>
</CustomField>