force-app/main/default/objects/Lead/fields/Interior_Features__c.field-meta.xml
<CustomField>
    <fullName>Interior_Features__c</fullName>
    <label>Interior Features</label>
    <type>LongTextArea</type>
    <length>2000</length>
    <description>Desired interior features separated by semicolons e.g. Open Plan Kitchen; Home Office; Fireplace</description>
</CustomField>