force-app/main/default/objects/Lead/fields/Lifestyle_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Lifestyle_Preferences__c</fullName>
    <label>Lifestyle Preferences</label>
    <type>LongTextArea</type>
    <length>2000</length>
    <description>Lifestyle preferences separated by semicolons e.g. Pet Friendly; Near Schools; Beach Access</description>
</CustomField>