force-app/main/default/objects/Lead/fields/Max_Area_sqft__c.field-meta.xml
<CustomField>
    <fullName>Max_Area_sqft__c</fullName>
    <label>Max Floor Area (sqft)</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <description>Maximum floor area in square feet</description>
</CustomField>