force-app/main/default/objects/Lead/fields/Min_Area_sqft__c.field-meta.xml
<CustomField>
    <fullName>Min_Area_sqft__c</fullName>
    <label>Min Floor Area (sqft)</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <description>Minimum floor area in square feet</description>
</CustomField>