force-app/main/default/objects/Lead/fields/Move_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Move_Timeline__c</fullName>
    <label>Move Timeline</label>
    <type>Picklist</type>
    <description>When the lead is looking to move</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASAP</fullName>
            </value>
            <value>
                <fullName>1–3 months</fullName>
            </value>
            <value>
                <fullName>3–6 months</fullName>
            </value>
            <value>
                <fullName>6–12 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>