force-app/main/default/objects/Lead/fields/Neighbourhood__c.field-meta.xml
<CustomField>
    <fullName>Neighbourhood__c</fullName>
    <label>Neighbourhood</label>
    <type>Text</type>
    <length>255</length>
    <description>Preferred neighbourhood or area within the city</description>
</CustomField>