force-app/main/default/objects/Lead/fields/Outdoor_Features__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_Features__c</fullName>
    <label>Outdoor Features</label>
    <type>LongTextArea</type>
    <length>2000</length>
    <description>Desired outdoor features separated by semicolons e.g. Pool; Large Garden; Sea View</description>
</CustomField>