force-app/main/default/objects/Lead/fields/Preferred_City__c.field-meta.xml
<CustomField>
    <fullName>Preferred_City__c</fullName>
    <label>Preferred City</label>
    <type>Text</type>
    <length>255</length>
    <description>Preferred city or location for property search</description>
</CustomField>