force-app/main/default/objects/Lead/fields/Property_Types__c.field-meta.xml
<CustomField>
    <fullName>Property_Types__c</fullName>
    <label>Property Types</label>
    <type>LongTextArea</type>
    <length>1000</length>
    <description>Selected property types separated by semicolons e.g. Villa; House; Apartment</description>
</CustomField>