force-app/main/default/objects/Lead/fields/Proximity_Preference__c.field-meta.xml
<CustomField>
    <fullName>Proximity_Preference__c</fullName>
    <label>Proximity Preference</label>
    <type>TextArea</type>
    <description>Proximity requirements e.g. near schools, beach, CBD</description>
</CustomField>