force-app/main/default/objects/Lead/fields/Purchase_Intent__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Intent__c</fullName>
    <label>Purchase Intent</label>
    <type>Picklist</type>
    <description>Whether the lead wants to buy or rent</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buy</fullName>
                <default>true</default>
                <label>Buy</label>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>